<resources>
    <string name="app_name">GreenMarket</string>

    <!--btn names -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="search">Search</string>
    <string name="contact">Contact</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="acc_info">Account Information</string>
    <string name="notifs">Notifications</string>
    <string name="blocked_acc">Blocked Accounts</string>
    <string name="language">Language</string>
    <string name="access">Accessibility</string>
    <string name="add_pic">Add a Picture</string>
    <string name="skip">Skip</string>
    <string name="remove">Remove</string>

    <!-- field names -->
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="verify_password">Verify password</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>

    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="country">County</string>
    <string name="address">Address</string>
    <string name="address_number">Address Number</string>
    <string name="street">Address Information</string>

    <!--various text-->
    <string name="text_beginning">Buy and Sell Fresh Products Faster with  GreenMarket</string>
    <string name="add_pic_title">Add a Picture</string>
    <string name="title_activity_add_image">AddImageActivity</string>
    <string name="welcome">Welcome back!</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="notAMember">Not a member? Register!</string>
    <string name="newProduct">New Product</string>
    <string name="addItem">Add Item</string>
    <string name="sendEmail">Send mail</string>
    <string name="writeEmail">Enter your email</string>
    <string name="categories">Categories</string>
    <string name="alsoLiked">You might also like</string>

    <string name="fruits">Fruits</string>
    <string name="veggies">Vegetables</string>
    <string name="animal">Animal Products</string>
    <string name="beekeeping">Beekeeping</string>
    <string name="viticulture">Viticulture</string>
    <string name="preservedFood"> Preserved Food</string>


    <string name="select">Type of produce</string>
    <string name="home">home</string>
    <string name="messages">messages</string>
    <string name="products">products</string>
    <string name="wishlist">wishlist</string>
    <string name="Wishlist">Wishlist</string>
    <string name="your_profile">your profile</string>
    <string name="settings">settings</string>
    <string name="fruits_image">Fruits Image</string>
    <string name="vegetable_image">Vegetable Image</string>
    <string name="preserved_goods_image">Preserved Goods Image</string>
    <string name="back">Back</string>
    <string name="nume_produs">nume produs</string>
    <string name="location">location</string>
    <string name="pret">pret</string>
    <string name="descriere">Description</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="place_for_a_picture">Place for a Picture</string>
    <string name="button_product">Button Product</string>
    <string name="back_button">Back button</string>
    <string name="edit_product">Edit product</string>
    <string name="delete">Delete</string>
    <string name="your_products">Your products</string>
    <string name="your_wishlist">Your wishlist</string>
    <string name="_2_2">2/2</string>
    <string name="_1_2">1/2</string>
    <string name="recently_added_near_you">Recently added near you</string>
    <string name="popular_in_this_category">Popular in this category</string>
    <string name="added_recently_in_this_category">Added recently in this category</string>
    <string name="dropdown_categories">dropdown-categories</string>
    <string name="details_about_your_product">Details about your product</string>
    <string name="modify_your_contact_details">Modify your contact details</string>
    <string name="your_product_s_image">Your product\'s image</string>
    <string name="type_of_packaging">Type of packaging</string>
    <string name="your_cart">Your Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total_price">Total price:</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="details_about_the_receiver">Details about the receiver*</string>
    <string name="details_about_your_address">Details about your address*</string>
    <string name="place_order">Place order</string>
    <string name="enter_your_desired_quantity">Enter your desired quantity* (only the number)</string>
    <string name="available_quantity">Available quantity</string>
    <string name="settings_button">settings button</string>
    <string name="your_order_was_received_successfully">Your order was received successfully</string>
    <string name="go_back">Go back</string>
    <string name="Messages">Messages</string>
    <string name="Username">Username</string>
    <string name="recently_added_in_this_category">Recently added in this category</string>
    <string name="your_description">Your description</string>
    <string name="orders">Orders</string>
    <string name="your_orders">Your orders</string>
    <string name="the_order_was_finished_someone_will_come_to_pick_up_the_goods_tomorrow">The order was finished. Someone will come to pick up the goods tomorrow.</string>
    <string name="seller_s_name">Seller\'s name:</string>
    <string name="buyer_s_name">Buyer\'s name:</string>
    <string name="reject_order">Reject Order</string>
    <string name="accept_order">Accept order</string>
    <string name="quantity_wanted">Quantity Wanted</string>
    <string name="buyer_s_number">Buyer\'s number:</string>
    <string name="contact_info">Contact Info</string>
    <string name="Products">Products</string>
    <string name="no_description">No description</string>
    <string name="email_input">Email input</string>
    <string name="welcome_image">welcome image</string>
    <string name="finished_order_image">finished order image</string>
    <string name="other_details">Other details</string>
    <string name="pay_using_card">Pay using card</string>
    <string name="pay_upon_receiving">Pay upon receiving</string>
    <string name="total">Total:</string>
    <string name="order_was_successful_image">Order was successful image</string>
    <string name="scrollbar">scrollbar</string>
    <string name="image">image</string>
    <string name="change_picture">Change Picture</string>
    <string name="Null">NULL</string>
    <string name="logout">Logout</string>
    <string name="_0_lei">0 lei</string>
    <string name="by_the_same_seller">By the same seller</string>
    <string name="try_something_different_from_your_area">Try something different from your area</string>
    <string name="products_by_a_known_seller">Products by a known seller</string>
    <string name="from_your_area_but_different">From your area but different</string>
    <string name="recently_added">Recently added</string>

</resources>