<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="30dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:contentDescription="@string/welcome_image"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:src="@drawable/homescreen" />
        <TextView
            android:id="@+id/Greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_beginning"
            android:textColor="@color/fontColour1"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/fontColour1"
            android:padding="15dp"
            android:text="@string/login"
            android:textColor="@color/background"
            android:textSize="20sp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/fontColour1"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="@color/background"
            android:textSize="20sp" />



    </LinearLayout>

</RelativeLayout>