<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollview"
        android:contentDescription="@string/scrollbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="90dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="30dp"
        android:orientation="vertical">
        <ImageView
            android:contentDescription="@string/place_for_a_picture"
            android:id="@+id/picturePlace"
            android:layout_width="170dp"
            android:layout_height="130dp"
            android:scaleType="fitXY"
            android:background="@color/background"
            android:layout_marginTop="55dp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/fontColour1"
                android:textSize="30sp"
                android:textStyle="bold">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/loc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="#B71C1C"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    android:background="@color/inputFieldColor"
                    android:padding="15dp"
                    android:text="@string/no_description"
                    android:hint="@string/no_description"
                    android:textColor="@color/fontColour1"
                    android:textColorHint="@color/fontColour1"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:id="@+id/reccs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alsoLiked"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/fontColour1"
                    android:padding="15dp"
                    android:layout_marginStart="15dp">
                </TextView>
                <HorizontalScrollView
                    android:id="@+id/horizontalScrollProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:foregroundGravity="center_vertical">
                    <LinearLayout
                        android:id="@+id/arrayProducts"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:foregroundGravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp">

                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/ContactInfoTitle"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:padding="10dp"
                    android:text="@string/contact_info"
                    android:textColor="@color/fontColour1"
                    android:textAlignment="textStart"
                    android:textSize="25sp"
                    android:textStyle="bold">
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:paddingStart="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/phone_number"
                        android:textColor="#B71C1C"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry">
                    </TextView>

                    <TextView
                        android:id="@+id/PhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:paddingStart="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/phone_number"
                        android:textColor="@color/fontColour1"
                        android:textIsSelectable="true"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry">
                    </TextView>
                </LinearLayout>
            </LinearLayout>

    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_edge_color"
        android:orientation="horizontal"
        android:gravity="center"
        android:elevation="8dp"
        android:padding="7dp">

        <ImageButton
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fontColour1"
            android:contentDescription="@string/home"
            android:padding="25dp"
            android:src="@drawable/home">
        </ImageButton>

        <ImageButton
            android:id="@+id/products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fontColour1"
            android:contentDescription="@string/products"
            android:padding="25dp"
            android:src="@drawable/loading">
        </ImageButton>

        <ImageButton
            android:id="@+id/wishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fontColour1"
            android:contentDescription="@string/wishlist"
            android:padding="25dp"
            android:src="@drawable/heart">
        </ImageButton>

        <ImageButton
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fontColour1"
            android:contentDescription="@string/your_profile"
            android:padding="25dp"
            android:src="@drawable/user">
        </ImageButton>
    </LinearLayout>
</RelativeLayout>