<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical">
        <ImageView
            android:contentDescription="@string/finished_order_image"
            android:layout_width="250dp"
            android:layout_height="220dp"
            android:src="@drawable/check">
        </ImageView>
        <TextView
            android:id="@+id/greeting_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_order_was_finished_someone_will_come_to_pick_up_the_goods_tomorrow"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/fontColour1"
            android:padding="25dp">
        </TextView>
        <Button
            android:id="@+id/goBack"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:backgroundTint="@color/fontColour1"
            android:padding="15dp"
            android:text="@string/go_back"
            android:textColor="@color/background"
            android:textSize="23sp" />
    </LinearLayout>
</RelativeLayout>