<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".WishlistActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="30dp"
            android:paddingTop="30dp"
            android:orientation="horizontal"
            tools:ignore="RtlSymmetry">
            <ImageButton
                android:id="@+id/back_button"
                android:contentDescription="@string/back_button"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/arrow_small_left"
                android:background="@color/background">
            </ImageButton>
            <TextView
                android:id="@+id/titleMessages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/your_wishlist"
                android:textColor="@color/fontColour1"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp">
            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- <Button
                      android:id="@+id/buttonProduct"
                      android:layout_width="match_parent"
                      android:layout_height="120dp"
                      android:layout_marginTop="30dp"
                      android:background="@drawable/list_element"
                      android:drawablePadding="8dp"
                      android:text="Product name"
                      android:textSize="20dp"
                      android:textAlignment="textStart"
                      android:textColor="@color/accentColour2"
                      android:contentDescription="Button Product" />

                  <ImageView
                      android:id="@+id/picturePlace"
                      android:layout_width="150dp"
                      android:layout_height="100dp"
                      android:layout_marginTop="40dp"
                      android:layout_marginLeft="170dp"
                      android:background="@color/inputFieldColor" />-->
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding = "10dp"
        android:background="@color/accentColour1">
        <ImageButton
            android:id="@+id/home"
            android:contentDescription="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accentColour1"
            android:src="@drawable/home"
            android:padding="25dp">
        </ImageButton>
        <ImageButton
            android:id="@+id/message"
            android:contentDescription="@string/messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accentColour1"
            android:src="@drawable/envelope"
            android:padding="25dp">
        </ImageButton>
        <ImageButton
            android:id="@+id/products"
            android:contentDescription="@string/products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accentColour1"
            android:src="@drawable/loading"
            android:padding="25dp">
        </ImageButton>
        <ImageButton
            android:id="@+id/wishlist"
            android:contentDescription="@string/wishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accentColour1"
            android:src="@drawable/heart"
            android:padding="25dp">
        </ImageButton>
        <ImageButton
            android:id="@+id/profile"
            android:contentDescription="@string/your_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accentColour1"
            android:src="@drawable/user"
            android:padding="25dp">
        </ImageButton>
    </LinearLayout>
</RelativeLayout>